WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
200396
[macOS, iOS] webaudio/silent-audio-interrupted-in-background.html sometimes crashes
https://bugs.webkit.org/show_bug.cgi?id=200396
Summary
[macOS, iOS] webaudio/silent-audio-interrupted-in-background.html sometimes c...
Eric Carlson
Reported
2019-08-02 11:12:06 PDT
webaudio/silent-audio-interrupted-in-background.html sometimes crashes. Don't do that.
Attachments
Patch
(1.70 KB, patch)
2019-08-02 11:26 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2019-08-02 11:12:30 PDT
<
rdar://problem/53819720
>
Eric Carlson
Comment 2
2019-08-02 11:26:40 PDT
Created
attachment 375432
[details]
Patch
WebKit Commit Bot
Comment 3
2019-08-02 11:58:53 PDT
Comment on
attachment 375432
[details]
Patch Clearing flags on attachment: 375432 Committed
r248167
: <
https://trac.webkit.org/changeset/248167
>
WebKit Commit Bot
Comment 4
2019-08-02 11:58:54 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug