[macOS, iOS] webaudio/silent-audio-interrupted-in-background.html sometimes crashes https://bugs.webkit.org/show_bug.cgi?id=200396 <rdar://problem/53819720>

Reviewed by Youenn Fablet.

No new test, this fixes an existing test.

* platform/graphics/avfoundation/AudioSourceProviderAVFObjC.mm:
(WebCore::AudioSourceProviderAVFObjC::~AudioSourceProviderAVFObjC): Drop the
lock before clearing m_tapStorage.


Canonical link: https://commits.webkit.org/214163@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248167 268f45cc-cd09-0410-ab3c-d52691b4dbfc